alt prometheus user to var

--- a/examples/prom-k8s/prom.yaml
+++ b/examples/prom-k8s/prom.yaml
@@ -24,6 +24,12 @@ spec:
               name: data
             - mountPath: /etc/prometheus
               name: config
+          env: 
+          - name: USER
+            valueFrom:
+              secretKeyRef:
+                name: promcred
+                key: username
       volumes:
         - name: config
           configMap:
