--- a/examples/prom-k8s/prom.yaml
+++ b/examples/prom-k8s/prom.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: prometheus
   name: prometheus
+  namespace: mc-server
 spec:
   replicas: 1
   serviceName: prometheus
@@ -18,7 +19,7 @@ spec:
     spec:
       containers:
         - name: main
-          image: prom/prometheus:v2.16.0
+          image: gcr.io/nice-mix-249319/prometheus-gcp
           volumeMounts:
             - mountPath: /prometheus
               name: data
