--- a/examples/prom-k8s/grafana.yaml
+++ b/examples/prom-k8s/grafana.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: main
-          image: grafana/grafana:6.7.1
+          image: gcr.io/nice-mix-249319/prometheus-gcp
           volumeMounts:
             - mountPath: /var/lib/grafana
               name: storage
